# UPBIT_ML

./: .env.json  .gitignore  AGENTS.md  CODE_OVERVIEW_KR.md  Dockerfile  README.md  app.py  common_utils.py  config.py  f1_universe.py  f2_signal.py  flask.py  indicators.py  jwt.py  notifications.py  orders.py  pyproject.toml  requests.py  requirements.txt  signal_loop.py  strategies.py  strategies_master_pruned.json  strategy_loader.py  trader.py  utils.py  validate_strategies.py
bot/: __init__.py  ai_analysis.py  indicators.py  runtime_settings.py  strategy.py  trader.py
config/: buy_exclude.json  coin_list_data_collection.json  coin_list_monitoring.json  coin_positions.json  config.json  current_universe.json  default_strategy.json  dynamic_params.json  exclude.json  f1_f1_universe_filters.json  f1_f3_coin_positions.json  f1_f5_data_collection_list.json  f2_f2_realtime_buy_list.json  f3_f3_pending_symbols.json  f3_f3_realtime_sell_list.json  f4_f2_risk_settings.json  f5_f1_monitoring_list.json  f5_f5_strategy_params.json  f6_buy_settings.json  f6_sell_settings.json  filter.json  filter_coin_data_collection.json  funds.json  market.json  monitor_list.json  order.json  risk.json  secrets.json  secrets.json.example  signal.json  strategies_master.json  strategy.json  strategy_backup.json  strategy_settings.json  universe.json  user_data.json  web_autotrade_status.json
doc/: 00_auto_upbit.md  00_before_coin.md  01_select_universe.md  01_selecting_coins_to_buy.md  02_coin_buy_logic.md  02_coin_buy_signal.md  03_coin_buy_logic.md  03_coin_sell_logic.md  04_risk_logic.md  (+52 more)
(+2236 files in other folders)
