[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "upbit_ml"
version = "0.1.0"
dependencies = [
    "Flask==2.3.2",
    "Flask-SocketIO==5.3.6",
    "eventlet==0.33.3",
    "jinja2==3.1.3",
    "python-dotenv==1.0.1",
    "pandas==1.5.3",
    "numpy==1.24.4",
    "talib-binary==0.4.0 ; sys_platform != 'win32'",
    "pyupbit==0.2.34",
    "requests==2.31.0",
    "PyJWT==2.8.0",
    "wheel",
    "ta-lib",
    "tqdm==4.66.4",
    "pyarrow==15.0.2",
    "optuna==3.5.0",
    "lightgbm==4.3.0",
    "scikit-learn==1.4.2",
    "pyTelegramBotAPI",
    "pytest==8.1.1"
]

[project.urls]
Homepage = "https://github.com/"

